# scaler_ai_assignment

./: .env.example  .gitignore  DESIGN.md  FRONTEND_DESIGN.md  README.md  pyproject.toml
eval/scenarios/: level-adaptivity-pairs.json  script-generation-cases.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
sample_outputs/final_eval/: report.md  results.json
sample_outputs/projects/: postgres_advanced.project.json  postgres_beginner.project.json  react_short_code_heavy.project.json
sample_outputs/scripts/: postgres_advanced.script.md  postgres_beginner.script.md  react_short_code_heavy.script.md
scripts/: run_evals.py
src/ai_tutor/: main.py
src/ai_tutor/api/: dependencies.py  routes.py
src/ai_tutor/core/: config.py  models.py
src/ai_tutor/evals/: judge.py  reporter.py  runner.py  structural.py  types.py
src/ai_tutor/services/: claude.py  density.py  evaluator.py  pipeline.py  prompts.py  tracing.py  validator.py
src/ai_tutor/storage/: repository.py
src/scaler_script_pipeline/: __init__.py  main.py
src/scaler_script_pipeline/api/: dependencies.py  routes.py
src/scaler_script_pipeline/core/: config.py  models.py
src/scaler_script_pipeline/evals/: judge.py  reporter.py  runner.py  structural.py  types.py
src/scaler_script_pipeline/services/: claude.py  density.py  evaluator.py  pipeline.py  prompts.py  tracing.py  validator.py
src/scaler_script_pipeline/storage/: repository.py
