[project]
name = "scaler-script-pipeline"
version = "0.1.0"
description = "Outline-first class script authoring pipeline for Scaler's assignment"
readme = "README.md"
authors = [
    { name = "nReal313", email = "mohitguleriaiit@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.2",
]

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
